progress swapping jsonnode for pojos